--- a/app/twig/index.twig
+++ b/app/twig/index.twig
@@ -8,15 +8,15 @@
         <div class="general pt152">
             <div class="general__circle-blue"></div>
             <div class="container">
-                <div class="general__circle-big-border-gray"></div>
-                <div class="general__circle-small-border-gray"></div>
-                <div class="general__circle-orange"></div>
-                <div class="general__all-tv"></div>
-                <div class="general__gadget"></div>
-                <div class="general__circle-white-big">
-                    <div class="general__circle-white-medium">
-                        <div class="general__circle-white-small">
-                            <div class="general__logo-66x47"></div>
+                <div class="general__circle-big-border-gray" data-elmove="true" data-delay="1"></div>
+                <div class="general__circle-small-border-gray" data-elmove="true" data-delay="1"></div>
+                <div class="general__circle-orange" data-elmove="true" data-delay="1.1"></div>
+                <div class="general__all-tv" data-elmove="true" data-dur="1.5" data-left="-800" data-delay="0" data-top="0"></div>
+                <div class="general__gadget" data-elmove="true" data-dur="1.5" data-left="800" data-delay="0.5" data-top="0"></div>
+                <div class="general__circle-white-big" data-elmove="true" data-delay="1.3">
+                    <div class="general__circle-white-medium" data-delay="1.4">
+                        <div class="general__circle-white-small" data-delay="1.5">
+                            <div class="general__logo-66x47" data-delay="1.6"></div>
                         </div>
                     </div>
                 </div>
@@ -110,13 +110,13 @@
                 Здесь собраны программы передач огромного количества каналов.  Реализована фильтрация по тематикам. Если захочется посмотреть передачу про жизнь животных или космос, выдача по параметру «образовательные» предложит более 20 каналов для прокачки знаний.
             </div>
         </div>
-        <div class="tv-guide-images">
-            <div class="tv-guide__image tv-guide__image_1"></div>
-            <div class="arrow arrow_1">Подробная карточка телепередачи</div>
-            <div class="tv-guide__image tv-guide__image_2"></div>
-            <div class="arrow arrow_2">Фильтрация по тематикам</div>
-            <div class="tv-guide__image tv-guide__image_3"></div>
-            <div class="arrow arrow_3">Программы, которые прямо сейчас идут на канале, подсвечиваются, что очень удобно</div>
+        <div class="tv-guide-images" data-el-group="group">
+            <div class="tv-guide__image tv-guide__image_1" data-elmove="group" data-dur="1" data-left="800" data-delay="0" data-top="0"></div>
+            <div class="tv-guide__image tv-guide__image_2" data-elmove="group" data-dur="1" data-left="800" data-delay="0.5" data-top="0"></div>
+            <div class="tv-guide__image tv-guide__image_3" data-elmove="group" data-dur="1" data-left="800" data-delay="1" data-top="0"></div>
+            <div class="arrow arrow_1" data-elmove="group" data-dur="1" data-left="0" data-delay="1.5" data-top="0">Подробная карточка телепередачи</div>
+            <div class="arrow arrow_2" data-elmove="group" data-dur="1" data-left="0" data-delay="2" data-top="0">Фильтрация по тематикам</div>
+            <div class="arrow arrow_3" data-elmove="group" data-dur="1" data-left="0" data-delay="2.5" data-top="0">Программы, которые прямо сейчас идут на канале, подсвечиваются, что очень удобно</div>
         </div>
     </div>
 
@@ -128,16 +128,16 @@
             </div>
             <div class="collection__paragraph">В приложении представлена большая база фильмов, которые при желании можно купить. Навигация осуществляется с помощью хэштегов настроения. Можно посмотреть трейлер и рейтинг фильма в приложении. Сегодня настрой на русскую мелодраму — #Любить_По_Русски облегчит выбор фильма или сериала на вечер.
             </div>
-            <div class="collection-images">
-                <div class="collection__gadget"></div>
-                <div class="collection__screen collection__screen_1"></div>
-                <div class="collection__screen collection__screen_2"></div>
-                <div class="collection__screen collection__screen_3"></div>
-                <div class="collection__price">229 руб</div>
-                <div class="collection__rating"><i class="fri fri-star"></i>8,9</div>
-                <div class="arrow arrow_4">Делитесь в соц. сетях</div>
-                <div class="collection__vk"></div>
-                <div class="collection__fb"></div>
+            <div class="collection-images" data-el-group="group">
+                <div class="collection__gadget" data-elmove="group" data-dur="1" data-left="800" data-delay="0" data-top="0"></div>
+                <div class="collection__screen collection__screen_1" data-elmove="group" data-dur="1" data-left="800" data-delay="0.5" data-top="0"></div>
+                <div class="collection__screen collection__screen_2" data-elmove="group" data-dur="1" data-left="800" data-delay="1" data-top="0"></div>
+                <div class="collection__screen collection__screen_3" data-elmove="group" data-dur="1" data-left="800" data-delay="1.5" data-top="0"></div>
+                <div class="collection__vk" data-elmove="group" data-dur="1" data-left="0" data-delay="2" data-top="0"></div>
+                <div class="collection__fb" data-elmove="group" data-dur="1" data-left="0" data-delay="2.5" data-top="0"></div>
+                <div class="arrow arrow_4" data-elmove="group" data-dur="1" data-left="0" data-delay="3" data-top="0">Делитесь в соц. сетях</div>
+                <div class="collection__price" data-elmove="group" data-dur="1" data-left="0" data-delay="3.5" data-top="0">229 руб</div>
+                <div class="collection__rating" data-elmove="group" data-dur="1" data-left="0" data-delay="3.5" data-top="0"><i class="fri fri-star"></i>8,9</div>
             </div>
         </div>
     </div>
@@ -145,10 +145,10 @@
     <div class="my-collection">
         <div class="my-collection__circle-blue"></div>
         <div class="container">
-            <div class="my-collection-wrapper">
-                <div class="my-collection__profile"></div>
-                <div class="my-collection__remind"></div>
-                <div class="my-collection__profile-descr">
+            <div class="my-collection-wrapper" data-el-group="group">
+                <div class="my-collection__profile" data-elmove="group" data-dur="1" data-left="0" data-delay="1" data-top="0"></div>
+                <div class="arrow arrow_5" data-elmove="group" data-dur="1" data-left="0" data-delay="1.5" data-top="0">Моя коллекция</div>
+                <div class="my-collection__profile-descr" data-elmove="group" data-dur="1" data-left="2" data-delay="1.7" data-top="0">
                     <div class="profile__photo"></div>
                     <div class="profile__descr">
                         <div class="profile__name">Евгений Лосев</div>
@@ -159,8 +159,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="arrow arrow_5">Моя коллекция</div>
-                <div class="arrow arrow_6">Напоминания</div>
+                <div class="my-collection__remind" data-elmove="group" data-dur="1" data-left="0" data-delay="2.5" data-top="0"></div>
+                <div class="arrow arrow_6" data-elmove="group" data-dur="1" data-left="0" data-delay="3" data-top="0">Напоминания</div>
                 <div class="my-collection__top-text">
                     Моя коллекция — это хорошее решение, чтобы не забыть посмотреть хороший фильм.
                 </div>
