--- a/app/sass/_main.sass
+++ b/app/sass/_main.sass
@@ -174,7 +174,7 @@ div
 .general__gadget
 	position: absolute
 	top: 220px
-	right: 155px
+	right: 185px
 	left: auto
 	width: 610px
 	height: 527px
@@ -912,6 +912,7 @@ div
 	margin-bottom: 89px
 
 .tags__title
+	visibility: visible !important
 	font-size: 94.92px
 	font-weight: 900
 	text-align: center
@@ -1107,6 +1108,7 @@ div
 
 	.nav-white
 		height: 113px
+		position: absolute
 
 	.pagenavi .pagenavi__post a .pagenavi__cell
 		font-family: "HelveticaNeueCyr"
@@ -1186,3 +1188,8 @@ div
 	.contacts
 		background-image: url("../images/background.jpg")
 		background-size: cover
+
+//.general-wrapper
+//	position: absolute
+//	width: 3000px
+//	height: 100%
