--- a/app/twig/index.twig
+++ b/app/twig/index.twig
@@ -7,16 +7,17 @@
     <div class="block">
         <div class="general pt152">
             <div class="general__circle-blue"></div>
+
             <div class="container">
-                <div class="general__circle-big-border-gray" data-elmove="true" data-delay="1"></div>
-                <div class="general__circle-small-border-gray" data-elmove="true" data-delay="1"></div>
-                <div class="general__circle-orange" data-elmove="true" data-delay="1.1"></div>
-                <div class="general__all-tv" data-elmove="true" data-dur="1.5" data-left="-800" data-delay="0" data-top="0"></div>
-                <div class="general__gadget" data-elmove="true" data-dur="1.5" data-left="800" data-delay="0.5" data-top="0"></div>
-                <div class="general__circle-white-big" data-elmove="true" data-delay="1.3">
-                    <div class="general__circle-white-medium" data-delay="1.4">
-                        <div class="general__circle-white-small" data-delay="1.5">
-                            <div class="general__logo-66x47" data-delay="1.6"></div>
+                <div class="general__circle-big-border-gray wow fadeIn" data-wow-delay="1s"></div>
+                <div class="general__circle-small-border-gray wow fadeIn" data-wow-delay="1s"></div>
+                <div class="general__circle-orange wow fadeIn" data-wow-delay="1.3s"></div>
+                <div class="general__all-tv wow fadeInRight"></div>
+                <div class="general__gadget wow fadeInRight" data-wow-delay="0.5s"></div>
+                <div class="general__circle-white-big wow fadeIn" data-wow-delay="1.3s">
+                    <div class="general__circle-white-medium wow fadeIn" data-wow-delay="1.6s">
+                        <div class="general__circle-white-small wow fadeIn" data-wow-delay="1.9s">
+                            <div class="general__logo-66x47 wow fadeIn" data-wow-delay="2.1s"></div>
                         </div>
                     </div>
                 </div>
@@ -101,7 +102,7 @@
         </div>
     </div>
 
-    <div class="tv-guide">
+    <div class="tv-guide jq-element-wrapper" data-element-container="tv-guide">
         <div class="tv-guide__circle-blue"></div>
         <div class="container">
             <div class="section-number">1</div>
@@ -110,17 +111,17 @@
                 Здесь собраны программы передач огромного количества каналов.  Реализована фильтрация по тематикам. Если захочется посмотреть передачу про жизнь животных или космос, выдача по параметру «образовательные» предложит более 20 каналов для прокачки знаний.
             </div>
         </div>
-        <div class="tv-guide-images" data-el-group="group">
-            <div class="tv-guide__image tv-guide__image_1" data-elmove="group" data-dur="1" data-left="800" data-delay="0" data-top="0"></div>
-            <div class="tv-guide__image tv-guide__image_2" data-elmove="group" data-dur="1" data-left="800" data-delay="0.5" data-top="0"></div>
-            <div class="tv-guide__image tv-guide__image_3" data-elmove="group" data-dur="1" data-left="800" data-delay="1" data-top="0"></div>
-            <div class="arrow arrow_1" data-elmove="group" data-dur="1" data-left="0" data-delay="1.5" data-top="0">Подробная карточка телепередачи</div>
-            <div class="arrow arrow_2" data-elmove="group" data-dur="1" data-left="0" data-delay="2" data-top="0">Фильтрация по тематикам</div>
-            <div class="arrow arrow_3" data-elmove="group" data-dur="1" data-left="0" data-delay="2.5" data-top="0">Программы, которые прямо сейчас идут на канале, подсвечиваются, что очень удобно</div>
+        <div class="tv-guide-images">
+            <div class="tv-guide__image tv-guide__image_1 wow fadeInRight jq-element" data-wow-offset="" data-element="tv-guide"></div>
+            <div class="tv-guide__image tv-guide__image_2 wow fadeInRight jq-element" data-wow-delay="1s" data-wow-offset="" data-element="tv-guide"></div>
+            <div class="tv-guide__image tv-guide__image_3 wow fadeInRight jq-element" data-wow-delay="2s" data-wow-offset="" data-element="tv-guide"></div>
+            <div class="arrow arrow_1 wow fadeIn jq-element" data-wow-delay="3.5s" data-wow-offset="" data-element="tv-guide">Подробная карточка телепередачи</div>
+            <div class="arrow arrow_2 wow fadeIn jq-element" data-wow-delay="2.5s" data-wow-offset="" data-element="tv-guide">Фильтрация по тематикам</div>
+            <div class="arrow arrow_3 wow fadeIn jq-element" data-wow-delay="3s" data-wow-offset="" data-element="tv-guide">Программы, которые прямо сейчас идут на канале, подсвечиваются, что очень удобно</div>
         </div>
     </div>
 
-    <div class="collection">
+    <div class="collection jq-element-wrapper" data-element-container="collection">
         <div class="container">
             <div class="section-number">2</div>
             <div class="small-title fz36 mb55">
@@ -128,27 +129,27 @@
             </div>
             <div class="collection__paragraph">В приложении представлена большая база фильмов, которые при желании можно купить. Навигация осуществляется с помощью хэштегов настроения. Можно посмотреть трейлер и рейтинг фильма в приложении. Сегодня настрой на русскую мелодраму — #Любить_По_Русски облегчит выбор фильма или сериала на вечер.
             </div>
-            <div class="collection-images" data-el-group="group">
-                <div class="collection__gadget" data-elmove="group" data-dur="1" data-left="800" data-delay="0" data-top="0"></div>
-                <div class="collection__screen collection__screen_1" data-elmove="group" data-dur="1" data-left="800" data-delay="0.5" data-top="0"></div>
-                <div class="collection__screen collection__screen_2" data-elmove="group" data-dur="1" data-left="800" data-delay="1" data-top="0"></div>
-                <div class="collection__screen collection__screen_3" data-elmove="group" data-dur="1" data-left="800" data-delay="1.5" data-top="0"></div>
-                <div class="collection__vk" data-elmove="group" data-dur="1" data-left="0" data-delay="2" data-top="0"></div>
-                <div class="collection__fb" data-elmove="group" data-dur="1" data-left="0" data-delay="2.5" data-top="0"></div>
-                <div class="arrow arrow_4" data-elmove="group" data-dur="1" data-left="0" data-delay="3" data-top="0">Делитесь в соц. сетях</div>
-                <div class="collection__price" data-elmove="group" data-dur="1" data-left="0" data-delay="3.5" data-top="0">229 руб</div>
-                <div class="collection__rating" data-elmove="group" data-dur="1" data-left="0" data-delay="3.5" data-top="0"><i class="fri fri-star"></i>8,9</div>
+            <div class="collection-images">
+                <div class="collection__gadget wow fadeInRight jq-element" data-wow-delay="" data-wow-offset="" data-element="collection"></div>
+                <div class="collection__screen collection__screen_1 wow fadeInRight jq-element" data-wow-delay="0.5s" data-wow-offset="" data-element="collection"></div>
+                <div class="collection__screen collection__screen_2 wow fadeInRight jq-element" data-wow-delay="1s" data-wow-offset="" data-element="collection"></div>
+                <div class="collection__screen collection__screen_3 wow fadeInRight jq-element" data-wow-delay="1.5s" data-wow-offset="" data-element="collection"></div>
+                <div class="collection__price  wow fadeIn jq-element" data-wow-delay="2.6s" data-wow-offset="" data-element="collection">229 руб</div>
+                <div class="collection__rating  wow fadeIn jq-element" data-wow-delay="2.6s" data-wow-offset="" data-element="collection"><i class="fri fri-star"></i>8,9</div>
+                <div class="arrow arrow_4 wow fadeIn jq-element" data-wow-delay="2.3s" data-wow-offset="" data-element="collection">Делитесь в соц. сетях</div>
+                <div class="collection__vk wow fadeIn jq-element" data-wow-delay="1.7s" data-wow-offset="" data-element="collection"></div>
+                <div class="collection__fb wow fadeIn jq-element" data-wow-delay="2s" data-wow-offset="" data-element="collection"></div>
             </div>
         </div>
     </div>
 
-    <div class="my-collection">
+    <div class="my-collection jq-element-wrapper" data-element-container="my-collection">
         <div class="my-collection__circle-blue"></div>
         <div class="container">
-            <div class="my-collection-wrapper" data-el-group="group">
-                <div class="my-collection__profile" data-elmove="group" data-dur="1" data-left="0" data-delay="1" data-top="0"></div>
-                <div class="arrow arrow_5" data-elmove="group" data-dur="1" data-left="0" data-delay="1.5" data-top="0">Моя коллекция</div>
-                <div class="my-collection__profile-descr" data-elmove="group" data-dur="1" data-left="2" data-delay="1.7" data-top="0">
+            <div class="my-collection-wrapper">
+                <div class="my-collection__profile wow fadeIn jq-element" data-wow-delay="" data-wow-offset="" data-element="my-collection"></div>
+                <div class="my-collection__remind wow fadeIn jq-element" data-wow-delay="1.5s" data-wow-offset="" data-element="my-collection"></div>
+                <div class="my-collection__profile-descr wow fadeIn jq-element" data-wow-delay="1s" data-wow-offset="" data-element="my-collection">
                     <div class="profile__photo"></div>
                     <div class="profile__descr">
                         <div class="profile__name">Евгений Лосев</div>
@@ -159,8 +160,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="my-collection__remind" data-elmove="group" data-dur="1" data-left="0" data-delay="2.5" data-top="0"></div>
-                <div class="arrow arrow_6" data-elmove="group" data-dur="1" data-left="0" data-delay="3" data-top="0">Напоминания</div>
+                <div class="arrow arrow_5 wow fadeIn jq-element" data-wow-delay="0.5s" data-wow-offset="" data-element="my-collection">Моя коллекция</div>
+                <div class="arrow arrow_6 wow fadeIn jq-element" data-wow-delay="2s" data-wow-offset="" data-element="my-collection">Напоминания</div>
                 <div class="my-collection__top-text">
                     Моя коллекция — это хорошее решение, чтобы не забыть посмотреть хороший фильм.
                 </div>
@@ -172,17 +173,17 @@
         </div>
     </div>
 
-    <div class="tags">
+    <div class="tags jq-element-wrapper" data-element-container="tags">
         <div class="container">
             <div class="section-number section-number_tags">3</div>
-            <div class="tags__title">
+            <div class="tags__title wow pulse jq-element" data-element="tags" data-wow-duration="0.6s" data-wow-delay="" data-wow-offset="">
                 <span class="tags__title-text-orange">#Теги-</span>
                 <span class="tags__title-text-blue">настроения</span>
             </div>
             <div class="tags__small-title">создали особую систему тегирования</div>
             <div class="tags-gadgets">
-                <div class="tags-gadget tags-gadget_1"></div>
-                <div class="tags-gadget tags-gadget_2"></div>
+                <div class="tags-gadget tags-gadget_1 wow fadeIn jq-element" data-element="tags" data-wow-delay="0.6s" data-wow-duration="1.5s" data-wow-offset=""></div>
+                <div class="tags-gadget tags-gadget_2 wow fadeIn jq-element" data-element="tags" data-wow-delay="0.6s" data-wow-duration="1.5s" data-wow-offset=""></div>
             </div>
             <div class="tags-descr">
                 <div class="tags-descr__title">3 этапа фильтрации</div>
@@ -203,11 +204,11 @@
         </div>
     </div>
 
-    <div class="conclusion">
+    <div class="conclusion jq-element-wrapper" data-element-container="conclusion">
         <div class="conclusion__circle-orange-top"></div>
         <div class="container">
-            <div class="conclusion__circle-big"></div>
-            <div class="conclusion__circle-small"></div>
+            <div class="conclusion__circle-big wow pulse jq-element" data-element="conclusion" data-wow-delay="" data-wow-duration="0.5s" data-wow-iteration="5" data-wow-offset=""></div>
+            <div class="conclusion__circle-small wow pulse jq-element" data-element="conclusion" data-wow-delay="" data-wow-duration="0.5s" data-wow-iteration="5" data-wow-offset=""></div>
             <div class="section-number section-number_conclusion">4</div>
             <div class="conclusion__title">
                 Удобный и интересный навигатор для клиента Интерактивного телевидения Ростелеком и не только.
