--- a/app/twig/layouts/scripts.twig
+++ b/app/twig/layouts/scripts.twig
@@ -2,11 +2,11 @@
 <!--bower:js-->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/owl.carousel/dist/owl.carousel.min.js"></script>
+<script src="bower_components/wow/dist/wow.min.js"></script>
 <!--endbower-->
 <!--endbuild-->
 
 <!--build:js js/common.js-->
 <script src="js/app.js"></script>
-<script src="js/animation.js"></script>
 {#<script src="PP/PP.js"></script>#}
 <!--endbuild-->
