--- a/app/twig/layouts/stylesheets.twig
+++ b/app/twig/layouts/stylesheets.twig
@@ -1,6 +1,7 @@
 <!--build:css css/vendor.css-->
 <!--bower:css-->
 <link rel="stylesheet" href="bower_components/owl.carousel/dist/assets/owl.carousel.min.css">
+<link rel="stylesheet" href="bower_components/animate.css/animate.min.css">
 <!--endbower-->
 <!--endbuild-->
 
