--- a/app/twig/index.twig
+++ b/app/twig/index.twig
@@ -32,6 +32,7 @@
 
         <div class="container container_955 mb50">
             <div class="tasks__grid tasks-grid">
+                <div class="tasks-gray-circle"></div>
                 <div class="tasks-grid__item tasks-grid__item_w410 tasks-grid-item">
                     <div class="mb20">
                         <span class="tasks-grid-item__title">Задача</span>
@@ -181,6 +182,8 @@
                 <span class="tags__title-text-blue">настроения</span>
             </div>
             <div class="tags__small-title">создали особую систему тегирования</div>
+            <div class="tags-gray-circle-big"></div>
+            <div class="tags-gray-circle-small"></div>
             <div class="tags-gadgets">
                 <div class="tags-gadget tags-gadget_1 wow fadeIn jq-element" data-element="tags" data-wow-delay="0.6s" data-wow-duration="1.5s" data-wow-offset=""></div>
                 <div class="tags-gadget tags-gadget_2 wow fadeIn jq-element" data-element="tags" data-wow-delay="0.6s" data-wow-duration="1.5s" data-wow-offset=""></div>
