--- a/app/twig/layouts/scripts.twig
+++ b/app/twig/layouts/scripts.twig
@@ -8,5 +8,5 @@
 
 <!--build:js js/common.js-->
 <script src="js/app.js"></script>
-{#<script src="PP/PP.js"></script>#}
+<script src="PP/PP.js"></script>
 <!--endbuild-->
