--- a/app/sass/_main.sass
+++ b/app/sass/_main.sass
@@ -286,7 +286,7 @@ div
 		right: -46px
 
 .tasks-grid-item__paragraph
-	font-family: "HelveticaNeueCyr"
+	font-family: "HelveticaNeueCyr", Helvetica
 	font-weight: 300
 	font-size: 15px
 	color: #000000
@@ -976,14 +976,14 @@ div
 	background-image: url("../images/tags-gadget-1.png")
 	width: 254px
 	height: 516px
-	top: 71px
+	top: 279px
 	left: 97px
 
 .tags-gadget_2
 	background-image: url("../images/tags-gadget-2.png")
 	width: 201px
 	height: 572px
-	top: 31px
+	top: 240px
 	left: 278px
 
 .text-orange
@@ -1143,7 +1143,7 @@ div
 		position: absolute
 
 	.pagenavi .pagenavi__post a .pagenavi__cell
-		font-family: "HelveticaNeueCyr"
+		font-family: "HelveticaNeueCyr", Helvetica
 		font-size: 16px
 		font-weight: 300
 		padding: 0 50px
@@ -1184,7 +1184,7 @@ div
 	.feedback .feedback__desktop p,
 	.feedback .feedback__desktop a,
 	.feedback__name
-		font-family: "HelveticaNeueCyr"
+		font-family: "HelveticaNeueCyr", HelveticaNeueCyr
 
 	.feedback__name
 		font-weight: 200
@@ -1212,7 +1212,7 @@ div
 	.vista__name,
 	.vista p,
 	.vista span
-		font-family: "HelveticaNeueCyr"
+		font-family: "HelveticaNeueCyr", HelveticaNeueCyr
 		color: #000
 
 	.section__space b
