--- a/app/sass/_main.sass
+++ b/app/sass/_main.sass
@@ -44,7 +44,6 @@ div
 	width: 100%
 	padding: 0 20px
 	margin: 0 auto
-	height: 100%
 	&::after
 		clear: both
 	&::before
@@ -516,8 +515,9 @@ div
 
 .tv-guide
 	position: relative
-	z-index: 100
+	z-index: 110
 	margin-bottom: 90px
+	background-color: #fff
 
 .section-number
 	position: relative
@@ -1096,14 +1096,15 @@ div
 	color: #2d2d2d
 	width: 700px
 	text-align: center
-	bottom: 189px
+	//bottom: 189px
 	left: 170px
 	line-height: 1.6
 	z-index: 100
+	top: 731px
 
 .conclusion__rostelcom
 	position: absolute
-	bottom: 87px
+	top: 855px
 	left: 409px
 	width: 221px
 	height: 65px
