--- a/app/twig/index.twig
+++ b/app/twig/index.twig
@@ -210,20 +210,22 @@
     <div class="conclusion jq-element-wrapper" data-element-container="conclusion">
         <div class="conclusion__circle-orange-top"></div>
         <div class="container">
-            <div class="conclusion__circle-big wow pulse jq-element" data-element="conclusion" data-wow-delay="" data-wow-duration="0.5s" data-wow-iteration="5" data-wow-offset=""></div>
-            <div class="conclusion__circle-small wow pulse jq-element" data-element="conclusion" data-wow-delay="" data-wow-duration="0.5s" data-wow-iteration="5" data-wow-offset=""></div>
-            <div class="section-number section-number_conclusion">4</div>
-            <div class="conclusion__title">
-                Удобный и интересный навигатор для клиента Интерактивного телевидения Ростелеком и не только.
+            <div class="conclusion-wrapper">
+                <div class="conclusion__circle-big wow pulse jq-element" data-element="conclusion" data-wow-delay="" data-wow-duration="0.5s" data-wow-iteration="5" data-wow-offset=""></div>
+                <div class="conclusion__circle-small wow pulse jq-element" data-element="conclusion" data-wow-delay="" data-wow-duration="0.5s" data-wow-iteration="5" data-wow-offset=""></div>
+                <div class="section-number section-number_conclusion">4</div>
+                <div class="conclusion__title">
+                    Удобный и интересный навигатор для клиента Интерактивного телевидения Ростелеком и не только.
+                </div>
+                <div class="conlcusion__all">Все</div>
+                <div class="conclusion__tv">ТВ</div>
+                <div class="conclusion__circle-white"></div>
+                <div class="counclusion__gadget"></div>
+                <div class="conclusion__bottom-text">
+                    ТВ-программа, кроме расписания, подсказывает номер канала, а видеопрокат — стоимость фильма. Киноман выберет картину на вечер по настроению и расшарит понравившийся сериал друзьям, а начинающий кулинар не пропустит передачу с всемирно известным поваром.
+                </div>
+                <div class="conclusion__rostelcom"></div>
             </div>
-            <div class="conlcusion__all">Все</div>
-            <div class="conclusion__tv">ТВ</div>
-            <div class="conclusion__circle-white"></div>
-            <div class="counclusion__gadget"></div>
-            <div class="conclusion__bottom-text">
-                ТВ-программа, кроме расписания, подсказывает номер канала, а видеопрокат — стоимость фильма. Киноман выберет картину на вечер по настроению и расшарит понравившийся сериал друзьям, а начинающий кулинар не пропустит передачу с всемирно известным поваром.
-            </div>
-            <div class="conclusion__rostelcom"></div>
         </div>
         <div class="conclusion__circle-blue-bottom"></div>
     </div>
