--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1313,7 +1313,7 @@ div {
   right: 93px;
 }
 
-.tags {
+.vset-tv-tags {
   height: 1079px;
 }
 
@@ -1385,7 +1385,7 @@ div {
   background-image: url("../images/tags-gadget-1.png");
   width: 254px;
   height: 516px;
-  top: 279px;
+  top: 389px;
   left: 97px;
 }
 
@@ -1393,7 +1393,7 @@ div {
   background-image: url("../images/tags-gadget-2.png");
   width: 201px;
   height: 572px;
-  top: 240px;
+  top: 350px;
   left: 278px;
 }
 
