--- a/app/sass/_main.sass
+++ b/app/sass/_main.sass
@@ -913,7 +913,7 @@ div
 	bottom: 53px
 	right: 93px
 
-.tags
+.vset-tv-tags
 	height: 1079px
 
 .tags-gray-circle-big
@@ -975,14 +975,14 @@ div
 	background-image: url("../images/tags-gadget-1.png")
 	width: 254px
 	height: 516px
-	top: 279px
+	top: 389px
 	left: 97px
 
 .tags-gadget_2
 	background-image: url("../images/tags-gadget-2.png")
 	width: 201px
 	height: 572px
-	top: 240px
+	top: 350px
 	left: 278px
 
 .text-orange
