--- a/app/twig/index.twig
+++ b/app/twig/index.twig
@@ -174,7 +174,7 @@
         </div>
     </div>
 
-    <div class="tags jq-element-wrapper" data-element-container="tags">
+    <div class="vset-tv-tags jq-element-wrapper" data-element-container="tags">
         <div class="container">
             <div class="section-number section-number_tags">3</div>
             <div class="tags__title wow pulse jq-element" data-element="tags" data-wow-duration="0.6s" data-wow-delay="" data-wow-offset="">
@@ -184,10 +184,8 @@
             <div class="tags__small-title">создали особую систему тегирования</div>
             <div class="tags-gray-circle-big"></div>
             <div class="tags-gray-circle-small"></div>
-            <div class="tags-gadgets">
-                <div class="tags-gadget tags-gadget_1 wow fadeIn jq-element" data-element="tags" data-wow-delay="0.6s" data-wow-duration="1.5s" data-wow-offset=""></div>
-                <div class="tags-gadget tags-gadget_2 wow fadeIn jq-element" data-element="tags" data-wow-delay="0.6s" data-wow-duration="1.5s" data-wow-offset=""></div>
-            </div>
+            <div class="tags-gadget tags-gadget_1 wow fadeIn jq-element" data-element="tags" data-wow-delay="0.6s" data-wow-duration="1.5s" data-wow-offset=""></div>
+            <div class="tags-gadget tags-gadget_2 wow fadeIn jq-element" data-element="tags" data-wow-delay="0.6s" data-wow-duration="1.5s" data-wow-offset=""></div>
             <div class="tags-descr">
                 <div class="tags-descr__title">3 этапа фильтрации</div>
                 <div class="tags-descr__text mb20">
