--- a/app/twig/index.twig
+++ b/app/twig/index.twig
@@ -113,12 +113,12 @@
             </div>
         </div>
         <div class="tv-guide-images">
-            <div class="tv-guide__image tv-guide__image_1 wow fadeInRight jq-element" data-wow-offset="" data-element="tv-guide"></div>
-            <div class="tv-guide__image tv-guide__image_2 wow fadeInRight jq-element" data-wow-delay="1s" data-wow-offset="" data-element="tv-guide"></div>
-            <div class="tv-guide__image tv-guide__image_3 wow fadeInRight jq-element" data-wow-delay="2s" data-wow-offset="" data-element="tv-guide"></div>
-            <div class="arrow arrow_1 wow fadeIn jq-element" data-wow-delay="3.5s" data-wow-offset="" data-element="tv-guide">Подробная карточка телепередачи</div>
-            <div class="arrow arrow_2 wow fadeIn jq-element" data-wow-delay="2.5s" data-wow-offset="" data-element="tv-guide">Фильтрация по тематикам</div>
-            <div class="arrow arrow_3 wow fadeIn jq-element" data-wow-delay="3s" data-wow-offset="" data-element="tv-guide">Программы, которые прямо сейчас идут на канале, подсвечиваются, что очень удобно</div>
+            <div class="tv-guide__image tv-guide__image_1 wow fadeInRight jq-element" data-wow-offset="" data-element="tv-guide" data-wow-duration="0.7s"></div>
+            <div class="tv-guide__image tv-guide__image_2 wow fadeInRight jq-element" data-wow-delay="0.7s" data-wow-offset="" data-element="tv-guide" data-wow-duration="0.5s"></div>
+            <div class="tv-guide__image tv-guide__image_3 wow fadeInRight jq-element" data-wow-delay="1.3s" data-wow-offset="" data-element="tv-guide" data-wow-duration="0.7s"></div>
+            <div class="arrow arrow_1 wow fadeIn jq-element" data-wow-delay="2.8s" data-wow-offset="" data-element="tv-guide" data-wow-duration="0.7s">Подробная карточка телепередачи</div>
+            <div class="arrow arrow_2 wow fadeIn jq-element" data-wow-delay="1.8s" data-wow-offset="" data-element="tv-guide" data-wow-duration="0.7s">Фильтрация по тематикам</div>
+            <div class="arrow arrow_3 wow fadeIn jq-element" data-wow-delay="2.3s" data-wow-offset="" data-element="tv-guide" data-wow-duration="0.7s">Программы, которые прямо сейчас идут на канале, подсвечиваются, что очень удобно</div>
         </div>
     </div>
 
@@ -177,15 +177,15 @@
     <div class="vset-tv-tags jq-element-wrapper" data-element-container="tags">
         <div class="container">
             <div class="section-number section-number_tags">3</div>
-            <div class="tags__title wow pulse jq-element" data-element="tags" data-wow-duration="0.6s" data-wow-delay="" data-wow-offset="">
+            <div class="tags__title wow pulse jq-element" data-element="tags" data-wow-duration="0.7s" data-wow-delay="" data-wow-offset="">
                 <span class="tags__title-text-orange">#Теги-</span>
                 <span class="tags__title-text-blue">настроения</span>
             </div>
             <div class="tags__small-title">создали особую систему тегирования</div>
             <div class="tags-gray-circle-big"></div>
             <div class="tags-gray-circle-small"></div>
-            <div class="tags-gadget tags-gadget_1 wow fadeIn jq-element" data-element="tags" data-wow-delay="0.6s" data-wow-duration="1.5s" data-wow-offset=""></div>
-            <div class="tags-gadget tags-gadget_2 wow fadeIn jq-element" data-element="tags" data-wow-delay="0.6s" data-wow-duration="1.5s" data-wow-offset=""></div>
+            <div class="tags-gadget tags-gadget_1 wow fadeIn jq-element" data-element="tags" data-wow-delay="0.7s" data-wow-duration="1.5s" data-wow-offset=""></div>
+            <div class="tags-gadget tags-gadget_2 wow fadeIn jq-element" data-element="tags" data-wow-delay="0.7s" data-wow-duration="1.5s" data-wow-offset=""></div>
             <div class="tags-descr">
                 <div class="tags-descr__title">3 этапа фильтрации</div>
                 <div class="tags-descr__text mb20">
