--- a/app/sass/_main.sass
+++ b/app/sass/_main.sass
@@ -940,7 +940,7 @@ div
 	margin-bottom: 89px
 
 .tags__title
-	visibility: visible !important
+	//visibility: visible !important
 	font-size: 94.92px
 	font-weight: 900
 	text-align: center
@@ -948,13 +948,15 @@ div
 	line-height: 0.83
 	margin-bottom: 10px
 	z-index: 10
-	position: absolute
+	position: relative
 
 .tags__title-text-orange
 	color: #ff6000
+	display: block
 
 .tags__title-text-blue
 	color: #00a8ff
+	display: block
 
 .tags__small-title
 	position: absolute
