--- a/app/twig/index.twig
+++ b/app/twig/index.twig
@@ -177,7 +177,7 @@
     <div class="vset-tv-tags jq-element-wrapper" data-element-container="tags">
         <div class="container">
             <div class="section-number section-number_tags">3</div>
-            <div class="tags__title wow pulse jq-element" data-element="tags" data-wow-duration="0.6s" data-wow-delay="" data-wow-offset="">
+            <div class="tags__title wow bounceIn jq-element" data-element="tags" data-wow-duration="0.6s" data-wow-delay="" data-wow-offset="">
                 <span class="tags__title-text-orange">#Теги-</span>
                 <span class="tags__title-text-blue">настроения</span>
             </div>
